deletion of watchlist
